<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz.MakeQuiz">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/questionText"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="2dp"
            android:text="@string/question_"
            android:textColor="#000" />

        <TextView
            android:id="@+id/countTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="2dp"
            android:text="@string/xx"
            android:textColor="#000" />

        <TextView
            android:id="@+id/TextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:padding="2dp"
            android:text="@string/correct_"
            android:textColor="#000" />

        <TextView
            android:id="@+id/countCorrectTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="2dp"
            android:text="@string/xx"
            android:textColor="#000" />

        <TextView
            android:id="@+id/TextView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:padding="2dp"
            android:text="@string/wrong_"
            android:textColor="#000" />

        <TextView
            android:id="@+id/countWrongTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="2dp"
            android:text="@string/xx"
            android:textColor="#000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/question"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText">

        <RadioButton
            android:id="@+id/option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:gravity="center"
            android:onClick="onClickButton"
            android:padding="12sp"
            android:text="@string/press_for_a"
            android:textColor="#000" />

        <RadioButton
            android:id="@+id/option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:gravity="center"
            android:onClick="onClickButton"
            android:padding="12sp"
            android:text="@string/press_for_b"
            android:textColor="#000" />

        <RadioButton
            android:id="@+id/option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:gravity="center"
            android:onClick="onClickButton"
            android:padding="12sp"
            android:text="@string/press_for_c"
            android:textColor="#000" />


        <RadioButton
            android:id="@+id/option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:button="@null"
            android:gravity="center"
            android:onClick="onClickButton"
            android:padding="12sp"
            android:text="@string/press_for_d"
            android:textColor="#000" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>