<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Word.AddWord">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="176dp"
        android:layout_height="0dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="54dp"
        android:contentDescription="@string/select_image"
        android:onClick="selectImage"
        app:layout_constraintBottom_toTopOf="@+id/wordEnEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/selectimage" />

    <EditText
        android:id="@+id/wordTrEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="@string/hint_word_tr"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/sentenceEnEditText"
        app:layout_constraintStart_toStartOf="@+id/sentenceEnEditText"
        app:layout_constraintTop_toBottomOf="@+id/wordEnEditText" />

    <EditText
        android:id="@+id/sentenceEnEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/hint_sentence_en"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/sentenceTrEditText"
        app:layout_constraintStart_toStartOf="@+id/sentenceTrEditText"
        app:layout_constraintTop_toBottomOf="@+id/wordTrEditText" />

    <EditText
        android:id="@+id/sentenceTrEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/hint_sentence_tr"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentenceEnEditText" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sentenceTrEditText"
        app:layout_constraintStart_toStartOf="@+id/sentenceTrEditText"
        app:layout_constraintTop_toBottomOf="@+id/sentenceTrEditText" />

    <EditText
        android:id="@+id/wordEnEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:hint="@string/hint_word_en"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/wordTrEditText"
        app:layout_constraintStart_toStartOf="@+id/wordTrEditText"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>